# kv-comp-analysis

./: .gitignore  .mcp.json  README.md  pyproject.toml
.claude/skills/comp-verify/: SKILL.md
docs/superpowers/plans/: 2026-06-07-kv-comp-analysis.md  2026-06-10-adjustment-methodology.md  2026-06-10-comp-verification-harness.md  2026-06-10-interactive-html-comp-report.md  2026-06-28-excel-report-output.md  2026-06-30-comp-feature-fields-and-year-built.md
docs/superpowers/specs/: 2026-06-06-kv-comp-analysis-design.md  2026-06-10-adjustment-methodology-design.md  2026-06-10-comp-verification-harness-design.md  2026-06-10-interactive-html-comp-report-design.md  2026-06-28-excel-report-output-design.md  2026-06-30-comp-feature-fields-and-year-built-adjustment-design.md
eval/: backtest.py  golden_set.json  verify.py
mcp_server/: comps.py  derivation.py  estimate.py  excel_report.py  geo.py  geocode.py  models.py  report.py  server.py
mcp_server/compsource/: base.py  honestdoor.py  synthetic.py
mcp_server/templates/: sf_uw_template.xlsx
scripts/: package-skill.sh
skill/comp-analysis/: SKILL.md
skill/comp-analysis/playbooks/: README.md  acreage-with-outbuildings.md
skill/comp-analysis/references/: house-rules.md  methodology.md
tests/: stubs.py  test_backtest.py  test_comps.py  test_derivation.py  test_estimate.py  test_excel_report.py  test_geo.py  test_geocode.py  test_honestdoor.py  test_live_e2e.py  test_models.py  test_report.py  test_server.py  test_synthetic.py  test_verify.py
